--- a/WebContent/createroom.html
+++ b/WebContent/createroom.html
@@ -6,7 +6,8 @@
 	.createroom input[type="text"]{width:100%; height:40px;}
 	.createroom input[type="submit"]{width:100%; height:40px; background:#EA4335; color:#fff; border:0;  cursor:pointer;}
 	.createroom h2{text-align:center;}
-	.newgame{position:absolute; top:0; right:0; height:50px; width:200px;}
+	.newgame{position:absolute; top:0; right:0; height:50px; width:200px;  background:#EA4335; color:#fff; text-align:center; padding-top:10px; text-decoration:none;}
+
 </style>
 <body  ng-app="createroom">
 <a href="/tictactoe/room.html" class="newgame" >Main</a>
