--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -6,11 +6,15 @@
 	.registerform{width:100%;   display:block;}
 	.registerform input {width:100%; height:30px;}
 	.error{color:red; display:block; text-align:center;}
+	#loginform{width:400px; margin:auto;}
+	#loginform input[type="text"]{width:100%; height:30px;}
+	#loginform input[type="password"]{width:100%; height:30px;}
+	#loginform input[type="submit"]{width:100px; float:right; height:40px; display:block; background:#4285F4; color:#fff;}
 </style>
 <body  ng-app="loginApp">
 
 
-<form ng-submit="login()" ng-controller="LoginController">
+<form id="loginform" ng-submit="login()" ng-controller="LoginController">
   <p>Login</p>
   <p><input type="text" ng-model="username" name="username" placeholder="Username" /></p>
   <p><input type="password" ng-model="password" name="password" placeholder="Password"/></p>
