--- a/WebContent/playgame.html
+++ b/WebContent/playgame.html
@@ -13,12 +13,12 @@
 
 <a href="/tictactoe/room.html" class="newgame" >Main</a>
 <a href="#"  class="newgame" ng-click="joingame()">Join Game</a>
-<strong>Game Status: </strong>{{winner}}
+<strong>Game Winner: </strong>{{winner}}
 
 
 
  <div class="container">
-     <span style="text-align:center; display:block; width:100%; font-size:30px; ">{{creator}}   VS  {{oponent}}</span>
+     <span style="text-align:center; display:block; width:100%; font-size:30px; ">{{ gamers }}</span>
       <div class="well">
       
         <div><button class="custom-btn btn-primary btn-lg" ng-repeat="cell in board[0]" ng-disabled="ticked(cell);" ng-click="playerchoice(cell,1,$index)">{{ cell.value }}</button></div>
