--- a/WebContent/room.html
+++ b/WebContent/room.html
@@ -8,7 +8,7 @@
 	.room{background:#34A853; color:#fff; cursor: pointer;}
 	.roomname{display:block; clear:both; color:#fff; }
 	.player{background:#4285F4; color:#fff;}
-	.col {float:left; width:48%; overflow:auto;  padding:10px;}
+	.col {float:left; width:48%; height:300px; overflow:auto;  padding:10px;}
 	button{border:0; margin:5px; padding:5px; background:none;  cursor:pointer}
 	.roomwrapper{width:80%; margin:100px auto; overflow-x:hidden;}
 	.newgame{width:300px; background: #EA4335; color:#fff; padding:10px;  margin:50px auto; display:block; text-align:center;  text-decoration:none;}
